--- a/Hello_World/package.json
+++ b/Hello_World/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hello_world",
   "version": "1.0.0",
-  "description": "",
+  "description": "Creates a new node js program",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
