--- a/Math_Module/package.json
+++ b/Math_Module/package.json
@@ -1,22 +1,20 @@
 {
   "name": "math_module",
   "version": "1.0.0",
-  "description": "",
+  "description": "",  
   "main": "index.js",
+  "type":"module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/VishaalJayavelu/Play-Ground/Math_Module"
-  },
-  "keywords": [
-    "Node",
-    "Js"
-  ],
-  "author": "Vishaal J <vishaal.j.trs@gmail.com>",
-  "license": "ISC",
-  "dependencies": {
-    "math": "^0.0.3"
-  }
-}
+     "test": "echo \"Error: no test specified\" && exit 1"
+   },
+   "repository": {
+     "type": "git",
+     "url": "https://github.com/VishaalJayavelu/Play-Ground/Math_Module"
+   },
+   "keywords": [
+     "Node",
+     "Js"
+   ],
+   "author": "Vishaal J <vishaal.j.trs@gmail.com>",
+   "license": "ISC"
+ }
