--- a/FileDownloaderUsingURL/package.json
+++ b/FileDownloaderUsingURL/package.json
@@ -1,20 +1,16 @@
 {
-  "name": "planet",
+  "name": "filedownloaderusingurl",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-     "start":"nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/VishaalJayavelu/Play-Ground/Planet"
+    "url": "https://github.com/VishaalJayavelu/Play-Ground/FileDownloaderUsingURL"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "csv-parse": "^5.4.0"
-  }
+  "license": "ISC"
 }
