--- a/ReadFromAndWritetoFiles/package.json
+++ b/ReadFromAndWritetoFiles/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/VishaalJayavelu/Play-Ground/ReadFromAndWritetoFiles"
+  },
   "keywords": [],
   "author": "Vishaal J <vishaal.j.trs@gmail.com>",
   "license": "ISC"
