--- a/Project_Ideas/Week-4/Blog_Application/package.json
+++ b/Project_Ideas/Week-4/Blog_Application/package.json
@@ -12,8 +12,7 @@
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
-  "dependencies": {
-    "body-parser": "^1.20.2",
+  "dependencies": "^1.20.2",
     "express": "^4.18.2",
     "hbs": "^4.2.0"
   }
